--- a/DSD_Backstage_UI/DSD_Backstage_UI.csproj
+++ b/DSD_Backstage_UI/DSD_Backstage_UI.csproj
@@ -38,15 +38,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <ItemGroup>
-    <Folder Include="Properties\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="404.html" />
     <Content Include="css\bootstrap.css" />
+    <Content Include="css\curtain.css" />
     <Content Include="css\style.css" />
+    <Content Include="dsd.html" />
     <Content Include="favicon.ico" />
     <Content Include="Default.html" />
+    <Content Include="fonts\Glyphs\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\Roboto\Roboto-Black-webfont.svg" />
     <Content Include="fonts\Roboto\Roboto-Bold-webfont.svg" />
     <Content Include="fonts\Roboto\Roboto-Italic-webfont.svg" />
@@ -78,6 +79,10 @@
     <Content Include="fonts\Roboto\Roboto-Regular-webfont.eot" />
     <Content Include="fonts\Roboto\Roboto-Regular-webfont.ttf" />
     <Content Include="fonts\Roboto\Roboto-Regular-webfont.woff" />
+    <Content Include="fonts\Glyphs\glyphicons-halflings-regular.eot" />
+    <Content Include="fonts\Glyphs\glyphicons-halflings-regular.ttf" />
+    <Content Include="fonts\Glyphs\glyphicons-halflings-regular.woff" />
+    <None Include="Properties\PublishProfiles\svdev6.pubxml" />
     <None Include="web.Debug.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
